--- a/Whiteboard/Classes/UIModules/BoardList/Cell/WBBlackboardListItemCell.xib
+++ b/Whiteboard/Classes/UIModules/BoardList/Cell/WBBlackboardListItemCell.xib
@@ -18,8 +18,11 @@
                 <rect key="frame" x="0.0" y="0.0" width="194" height="231"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_cell_full" translatesAutoresizingMaskIntoConstraints="NO" id="6hd-cp-9Zv">
+                        <rect key="frame" x="32" y="13" width="130" height="204"/>
+                    </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="odR-rE-DMl">
-                        <rect key="frame" x="37" y="18.5" width="120" height="194"/>
+                        <rect key="frame" x="37" y="18" width="120" height="194"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m2b-2S-FiR">
                                 <rect key="frame" x="0.0" y="149" width="120" height="45"/>
@@ -98,14 +101,25 @@
             </view>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="6hd-cp-9Zv" firstAttribute="height" secondItem="odR-rE-DMl" secondAttribute="height" constant="10" id="1l9-n0-OSo"/>
                 <constraint firstItem="odR-rE-DMl" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="BDV-en-33j"/>
+                <constraint firstItem="6hd-cp-9Zv" firstAttribute="centerX" secondItem="odR-rE-DMl" secondAttribute="centerX" id="FTf-Vx-fJJ"/>
                 <constraint firstItem="odR-rE-DMl" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="iP2-wb-u2Z"/>
+                <constraint firstItem="6hd-cp-9Zv" firstAttribute="centerY" secondItem="odR-rE-DMl" secondAttribute="centerY" id="jbe-3f-g0r"/>
+                <constraint firstItem="6hd-cp-9Zv" firstAttribute="width" secondItem="odR-rE-DMl" secondAttribute="width" constant="10" id="noF-qd-Qly"/>
             </constraints>
             <size key="customSize" width="194" height="231"/>
+            <connections>
+                <outlet property="boardNameLabel" destination="pue-kJ-dpg" id="dHl-fI-h9G"/>
+                <outlet property="boardSelectImageView" destination="xjr-VE-BT2" id="EaX-gk-cbI"/>
+                <outlet property="coverImageView" destination="aN1-FY-thb" id="OBY-zE-eim"/>
+                <outlet property="createNameLabel" destination="0Kp-FX-J5b" id="4AX-wh-RXe"/>
+            </connections>
             <point key="canvasLocation" x="106" y="144.5"/>
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="bg_cell_full" width="18" height="20"/>
         <image name="bg_tab_badge_check" width="29" height="29"/>
         <image name="star_bg" width="100" height="62"/>
     </resources>
