用户第一次进入时, 加入创建的引导流程, Me的页面显示自己的名称

--- a/Whiteboard/Classes/UIModules/BoardAdd/WBBoardAddController.xib
+++ b/Whiteboard/Classes/UIModules/BoardAdd/WBBoardAddController.xib
@@ -54,7 +54,7 @@
                                                         <constraint firstAttribute="height" constant="0.5" id="vm5-Hd-fWw"/>
                                                     </constraints>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="有故事的列宁" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rwo-2W-H9o">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rwo-2W-H9o">
                                                     <rect key="frame" x="10" y="28" width="100" height="12"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                     <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
