--- a/Whiteboard/Classes/UIModules/Me/Cell/WBMeMoreCell.xib
+++ b/Whiteboard/Classes/UIModules/Me/Cell/WBMeMoreCell.xib
@@ -61,6 +61,10 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="cellNameLabel" destination="abw-3h-924" id="ABd-AI-mxs"/>
+            </connections>
+            <point key="canvasLocation" x="-279" y="-134"/>
         </tableViewCell>
     </objects>
     <resources>
