--- a/Whiteboard/Classes/UIModules/Me/Views/WBMeHeaderView.xib
+++ b/Whiteboard/Classes/UIModules/Me/Views/WBMeHeaderView.xib
@@ -20,12 +20,17 @@
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_cell_full" translatesAutoresizingMaskIntoConstraints="NO" id="Bnt-KJ-y6Z">
                             <rect key="frame" x="0.0" y="0.0" width="335" height="140"/>
                         </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_ac_s_other_13" translatesAutoresizingMaskIntoConstraints="NO" id="5Bf-JY-1gL">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_ac_s_other_13" translatesAutoresizingMaskIntoConstraints="NO" id="5Bf-JY-1gL">
                             <rect key="frame" x="137.5" y="12" width="60" height="60"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="60" id="55E-WH-v9J"/>
                                 <constraint firstAttribute="height" constant="60" id="ZeL-u9-VlY"/>
                             </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="5"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="有故事的列宁" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hDt-tm-4ld">
                             <rect key="frame" x="94.5" y="91" width="146" height="29"/>
@@ -56,14 +61,15 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="userHeaderImageView" destination="5Bf-JY-1gL" id="43F-H4-T7x"/>
+                <outlet property="userHeaderImageView" destination="5Bf-JY-1gL" id="Qpc-U8-v14"/>
+                <outlet property="userInfoContentView" destination="N09-Pf-QVC" id="1Rk-CG-5Ya"/>
                 <outlet property="userNickLabel" destination="hDt-tm-4ld" id="PQc-Ak-8m0"/>
             </connections>
-            <point key="canvasLocation" x="175.5" y="201"/>
+            <point key="canvasLocation" x="-140" y="133"/>
         </view>
     </objects>
     <resources>
         <image name="bg_cell_full" width="18" height="20"/>
-        <image name="ico_ac_s_other_13" width="78" height="85"/>
+        <image name="ico_ac_s_other_13" width="124" height="139"/>
     </resources>
 </document>
