--- a/Whiteboard/Classes/UIModules/LoginAndRegister/Login/WBLoginController.xib
+++ b/Whiteboard/Classes/UIModules/LoginAndRegister/Login/WBLoginController.xib
@@ -65,6 +65,13 @@
                         <action selector="loginBtnClick:" destination="-1" eventType="touchUpInside" id="ztl-6S-HfB"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="这个页面暂时还测试用的" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f40-FN-Qig">
+                    <rect key="frame" x="70" y="323" width="191" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
