1.展示一些当前使用板子的信息, 但是由于字段拿不到, 先搁置 2.打包的时候, 把log日志关闭

--- a/Whiteboard/Classes/UIModules/Me/Cell/WBMeMoreCell.xib
+++ b/Whiteboard/Classes/UIModules/Me/Cell/WBMeMoreCell.xib
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -37,9 +38,22 @@
                                     <constraint firstAttribute="height" constant="15" id="j6Y-xE-IQq"/>
                                 </constraints>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YDV-me-tsr">
+                                <rect key="frame" x="212" y="24" width="36" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="36" id="Ftp-oc-Ram"/>
+                                    <constraint firstAttribute="height" constant="36" id="Tc5-as-Lw4"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="YDV-me-tsr" firstAttribute="centerY" secondItem="oc5-NU-yDq" secondAttribute="centerY" id="207-Q4-ogr"/>
                             <constraint firstAttribute="bottom" secondItem="bNL-ML-PPb" secondAttribute="bottom" id="6cn-tJ-jcm"/>
                             <constraint firstItem="abw-3h-924" firstAttribute="centerY" secondItem="bNL-ML-PPb" secondAttribute="centerY" id="Dii-I3-FWf"/>
                             <constraint firstItem="bNL-ML-PPb" firstAttribute="top" secondItem="oc5-NU-yDq" secondAttribute="top" id="JF2-x1-XQa"/>
@@ -47,6 +61,7 @@
                             <constraint firstItem="pJI-bm-d4y" firstAttribute="centerY" secondItem="bNL-ML-PPb" secondAttribute="centerY" id="Xb5-Dh-m6d"/>
                             <constraint firstItem="abw-3h-924" firstAttribute="leading" secondItem="oc5-NU-yDq" secondAttribute="leading" constant="20" id="ZfQ-OG-CKe"/>
                             <constraint firstAttribute="trailing" secondItem="bNL-ML-PPb" secondAttribute="trailing" id="Zzs-WM-cJZ"/>
+                            <constraint firstItem="pJI-bm-d4y" firstAttribute="leading" secondItem="YDV-me-tsr" secondAttribute="trailing" constant="8" id="gOh-hP-Csv"/>
                             <constraint firstItem="bNL-ML-PPb" firstAttribute="leading" secondItem="oc5-NU-yDq" secondAttribute="leading" id="tit-Pj-7ZZ"/>
                         </constraints>
                     </view>
@@ -63,6 +78,7 @@
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
                 <outlet property="cellNameLabel" destination="abw-3h-924" id="ABd-AI-mxs"/>
+                <outlet property="currentUseingBoardImageView" destination="YDV-me-tsr" id="nEc-DZ-VK3"/>
             </connections>
             <point key="canvasLocation" x="-279" y="-134"/>
         </tableViewCell>
